--- a/index.html
+++ b/index.html
@@ -9,27 +9,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Inter:wght@400;500;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>lam-html-css</title>
 </head>
 
 <body>
-    <section class="section-first">
+    <section id="section-first">
         <div class="section-first__header">
-            <div class="section-first__header-logo"><img class ="section-first__header-logo--image" src="./assets/images/section-first__header-logo--image.png" /></div>
+            <div class="section-first__header-logo"><img class ="section-first__header-logo--image" src="./assets/images/logo-whitepace.png" /></div>
             <div class="section-first__header-navbar">
                 <div class="section-first__header-navbar--left">
-                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Products</a><img class="section-first__header-navbar--left-image-main-chevron-down" src="./assets/images/section-first__header-navbar--left-image-main-chevron-down.png" /></div>
-                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Solutions</a><img class="section-first__header-navbar--left-image-main-chevron-down" src="./assets/images/section-first__header-navbar--left-image-main-chevron-down.png" /></div>
-                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Resources</a><img class="section-first__header-navbar--left-image-main-chevron-down" src="./assets/images/section-first__header-navbar--left-image-main-chevron-down.png" /></div>
-                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Pricing</a><img class="section-first__header-navbar--left-image-main-chevron-down" src="./assets/images/section-first__header-navbar--left-image-main-chevron-down.png" /></div>
+                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Products</a><img class="section-first__header-navbar--left-image-main" src="./assets/images/chevron-down.png" /></div>
+                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Solutions</a><img class="section-first__header-navbar--left-image-main" src="./assets/images/chevron-down.png" /></div>
+                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Resources</a><img class="section-first__header-navbar--left-image-main" src="./assets/images/chevron-down.png" /></div>
+                    <div class="section-first__header-navbar--left-block-main"><a class="section-first__header-navbar--left-link-main" href="#">Pricing</a><img class="section-first__header-navbar--left-image-main" src="./assets/images/chevron-down.png" /></div>
                 </div>
                 <div class="section-first__header-navbar--right">
                     <button class="section-first__header-navbar--right-button-first">Login</button>
-                    <button class="section-first__header-navbar--right-button-second">Try Whitepace free<img class="section-first__header-navbar--right-button-second-image-arrow-right" src="./assets/images/section-first__header-navbar--right-button-second-image-arrow-right.png" /></button>
+                    <button class="section-first__header-navbar--right-button-second">Try Whitepace free<img class="section-first__header-navbar--right-button-second-image" src="./assets/images/arrow-right.png" /></button>
                 </div>
             </div>
+        </div>
+        <div class="section-first__Get-More-Done-with-whitepace">
+            <div class="section-first__Get-More-Done-with-whitepace--block">
+                <p class="h3 section-first__Get-More-Done-with-whitepace--title">Get More Done with whitepace</p>
+                <p class="p7 section-first__Get-More-Done-with-whitepace--content">Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
+                <button class="section-first__Get-More-Done-with-whitepace--button">Try Whitepace free<img class="section-first__Get-More-Done-with-whitepace--button-image" src="./assets/images/arrow-right.png" /></button>
+            </div>
+            <div class="section-first__Get-More-Done-with-whitepace--container"></div>
         </div>
     </section>
 </body>
