update session 1: done 100% session 2: done 40%

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section id="section-first">
+    <section class="section-first">
         <div class="section-first__header">
             <div class="section-first__header-logo"><img class ="section-first__header-logo--image" src="./assets/images/logo-whitepace.png" /></div>
             <div class="section-first__header-navbar">
@@ -30,13 +30,24 @@
                 </div>
             </div>
         </div>
-        <div class="section-first__Get-More-Done-with-whitepace">
-            <div class="section-first__Get-More-Done-with-whitepace--block">
-                <p class="h3 section-first__Get-More-Done-with-whitepace--title">Get More Done with whitepace</p>
-                <p class="p7 section-first__Get-More-Done-with-whitepace--content">Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
-                <button class="section-first__Get-More-Done-with-whitepace--button">Try Whitepace free<img class="section-first__Get-More-Done-with-whitepace--button-image" src="./assets/images/arrow-right.png" /></button>
+        <div class="part section-first__Get-More-Done-with-whitepace">
+            <div class="block section-first__Get-More-Done-with-whitepace--block">
+                <p class="font3 color1 margin1">Get More Done with whitepace</p>
+                <p class="font10 color1 margin2">Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
+                <button class="button1">Try Whitepace free<img class="image" src="./assets/images/arrow-right.png" /></button>
             </div>
-            <div class="section-first__Get-More-Done-with-whitepace--container"></div>
+            <div class="container section-first__Get-More-Done-with-whitepace--container"></div>
+        </div>
+    </section>
+
+    <section class="section-second">
+        <div class="part section-second__Project-Management">
+            <div class="block section-second__Project-Management--block">
+                <p class="font1 color2 margin1">Project Management</p>
+                <p class="font10 color2 margin2">Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly from the app. Take photos with the mobile app and save them to a note.</p>
+                <button class="button2">Get Started<img class="image" src="./assets/images/arrow-right.png" /></button>
+            </div>
+            <div class="container section-second__Project-Management--container"></div>
         </div>
     </section>
 </body>
