--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="first-section__top-header__right-side">
           <ul class="first-section__top-header__right-side__list-function">
             <li
-              class="first-section__top-header__right-side__list-function__child-function"
+              class="first-section__top-header__right-side__list-function__child-function font-color font-text"
             >
-              <h3>Products</h3>
+              Products
               <img src="./assets/icons/ic_arrowDown.png" />
             </li>
             <li
