--- a/index.html
+++ b/index.html
@@ -4,34 +4,137 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./Css/Index.css" />
     <title>Document</title>
   </head>
   <body>
-    <header></header>
-    <div style="margin-bottom: 24px">sâsasacbdshkjf</div>
-    <div>djnsakdnksdnaks</div>
-    <!--Bài tập
-      thực hiện code đoạn html theo hình
-      lưu ý:
-      _ hình ảnh thay thế dùng hình nào cũng được, không quá đen tối :3
-      - font size yêu cầu: 16 - 22,
-      - font family là Roboto
-      - Nút Detail khi nhấn sẽ trỏ về 1 trang web bất kì
-      - nột dung text lấy từ Lorem Ipsum,
-      - màu chữ là màu đen
-      ---- điểm cộng: phần responsive (không bắt buộc làm)
-    -->
-    <!-- <img src="./assets/bai_tap_01.png" alt="bai_tap_01" /> -->
-    <!-- <h1>6273648hjklasndf</h1>
-    <h2>62763728</h2> -->
-    <script src="./js/index.js"></script>
-    <footer></footer>
+    <header>
+      <section id="first-section">
+        <nav class="first-section__top-header">
+          <div class="first-section__top-header__left-side">
+            <img src="./Image/img_logo.png" />
+          </div>
+
+          <div class="first-section__top-header__right-side">
+            <ul class="first-section__top-header__right-side__list-function">
+              <li
+                class="first-section__top-header__right-side__list-function__child-function"
+              >
+                <h3>Product</h3>
+                <img src="./Icon/icon_arrow-down.png" />
+              </li>
+              <li
+                class="first-section__top-header__right-side__list-function__child-function"
+              >
+                <h3>Solutions</h3>
+                <img src="./Icon/icon_arrow-down.png" />
+              </li>
+              <li
+                class="first-section__top-header__right-side__list-function__child-function"
+              >
+                <h3>Resources</h3>
+                <img src="./Icon/icon_arrow-down.png" />
+              </li>
+              <li
+                class="first-section__top-header__right-side__list-function__child-function"
+              >
+                <h3>Pricing</h3>
+                <img src="./Icon/icon_arrow-down.png" />
+              </li>
+            </ul>
+
+            <div class="first-section__top-header__right-side__list-button">
+              <a
+                class="first-section__top-header__right-side__list-button__btn-login"
+                href="#"
+              >
+                <h3>Login</h3>
+              </a>
+              <a
+                class="first-section__top-header__right-side__list-button__btn-register"
+                href="#"
+              >
+                <h3>Try Whitespace free</h3>
+                <img src="./Icon/icon_arrow-next.png" />
+              </a>
+            </div>
+          </div>
+        </nav>
+
+        <div class="first-section__content-top-section">
+          <div class="first-section__content-top-section__left-side">
+            <h6>Get More Done width Whitepace</h6>
+            <h5>
+              Project management software that enables your teams to
+              collaborate, plan, analyze and manage everyday tasks
+            </h5>
+            <a
+              href="#"
+              class="first-section__content-top-section__left-side__btn-register"
+            >
+              <h6>Try Whitepace free</h6>
+              <img src="./Icon/icon_arrow-next.png" />
+            </a>
+          </div>
+          <div class="first-section__content-top-section__right-side">
+            <div
+              class="first-section__content-top-section__right-side__image-container"
+            ></div>
+          </div>
+        </div>
+      </section>
+    </header>
+
+    <main>
+      <section id="second-section">
+        <div class="second-section__first-content">
+          <div class="second-section__first-content__left-side">
+            <h6>Project Management</h6>
+            <img src="./Image/img_element-text.png" />
+
+            <h5>
+              Images, video, PDFs and audio files are supported. Create math
+              expressions and diagrams directly from the app. Take photos with
+              the mobile app and save them to a note
+            </h5>
+            <a
+              href="#"
+              class="second-section__first-content__left-side__btn-started"
+            >
+              <h6>Get Started</h6>
+              <img src="./Icon/icon_arrow-next.png" />
+            </a>
+          </div>
+
+          <div class="second-section__first-content__right-side">
+            <div
+              class="second-section__first-content__right-side__image-container"
+            ></div>
+          </div>
+        </div>
+
+        <div class="second-section__second-content">
+          <div class="second-section__second-content__left-side">
+            <img src="./Image/img_work-together.png" />
+          </div>
+
+          <div class="second-section__second-content__right-side">
+            <h6>Work together</h6>
+            <h5>
+              With Whitepace, share your notes your colleagues and collaborate
+              on them. You can also publish a note the internet and share the
+              URL with others
+            </h5>
+            <a
+              href="#"
+              class="second-section__second-content__right-side__btn-get-started"
+            >
+              <h6>Try it now</h6>
+              <img src="./Icon/icon_arrow-next.png" />
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
