update file css

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@400;500;600&family=Roboto:wght@300;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>bai tap html-css</title>
@@ -57,7 +59,7 @@
     <!-- SECTION 1 -->
     <section id="section1" class="section1__container title container">
       <div class="secton1__data">
-        <div>
+        <div class="section1__data">
           <h3 class="section1__title">Get More Done with whitepace</h3>
 
           <p class="section1__content content">
