update section 1: 100% section 2: 95%

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="section-first">
+    <section class="section1 section-first">
         <div class="section-first__header">
             <div class="section-first__header-logo"><img class ="section-first__header-logo--image" src="./assets/images/logo-whitepace.png" /></div>
             <div class="section-first__header-navbar">
@@ -40,7 +40,7 @@
         </div>
     </section>
 
-    <section class="section-second">
+    <section class="section2 section-second">
         <div class="part section-second__Project-Management">
             <div class="block section-second__Project-Management--block">
                 <p class="font1 color2 margin1">Project Management</p>
@@ -48,6 +48,25 @@
                 <button class="button2">Get Started<img class="image" src="./assets/images/arrow-right.png" /></button>
             </div>
             <div class="container section-second__Project-Management--container"></div>
+        </div>
+        <div class="part section-second__Work-together">
+            <div class="section-second__Work-together--container"><img class="section-second__Work-together--image" src="./assets/images/section-second__Work-together--image.png" /></div>
+            <div class="block section-second__Work-together--block">
+                <p class="font1 color2 margin1">Work together</p>
+                <p class="font10 color2 margin2">With whitepace, share your notes with your colleagues and collaborate on them. You can also publish a note to the internet and share the URL with others.</p>
+                <button class="button2">Try it now<img class="image" src="./assets/images/arrow-right.png" /></button>
+            </div>
+        </div>
+    </section>
+
+    <section class="section1 section-third">
+        <div class="part section-third__Use-as-Extension">
+            <div class="block section-third__Use-as-Extension--block">
+                <p class="font1 color1 margin1">Use as Extension</p>
+                <p class="font10 color1 margin2">Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
+                <button class="button2">Let’s Go<img class="image" src="./assets/images/arrow-right.png" /></button>
+            </div>
+            <div class="container section-third__Use-as-Extension--container"></div>
         </div>
     </section>
 </body>
