--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="section1 section-first">
+    <section class="section__blue1 section-first">
         <div class="section-first__header">
             <div class="section-first__header-logo"><img class ="section-first__header-logo--image" src="./assets/images/logo-whitepace.png" /></div>
             <div class="section-first__header-navbar">
@@ -32,41 +32,52 @@
         </div>
         <div class="part section-first__Get-More-Done-with-whitepace">
             <div class="block section-first__Get-More-Done-with-whitepace--block">
-                <p class="font3 color1 margin1">Get More Done with whitepace</p>
-                <p class="font10 color1 margin2">Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
-                <button class="button1">Try Whitepace free<img class="image" src="./assets/images/arrow-right.png" /></button>
+                <p class="font__70064 color__white margin__24">Get More Done with whitepace</p>
+                <p class="font__40018 color__white margin__60">Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
+                <button class="button__202020208--50018">Try Whitepace free<img class="image" src="./assets/images/arrow-right.png" /></button>
             </div>
             <div class="container section-first__Get-More-Done-with-whitepace--container"></div>
         </div>
     </section>
 
-    <section class="section2 section-second">
+    <section class="section__white section-second">
         <div class="part section-second__Project-Management">
             <div class="block section-second__Project-Management--block">
-                <p class="font1 color2 margin1">Project Management</p>
-                <p class="font10 color2 margin2">Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly from the app. Take photos with the mobile app and save them to a note.</p>
-                <button class="button2">Get Started<img class="image" src="./assets/images/arrow-right.png" /></button>
+                <p class="font__70072 color__black margin__24">Project Management</p>
+                <p class="font__40018 color__black margin__60">Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly from the app. Take photos with the mobile app and save them to a note.</p>
+                <button class="button__204020406--50018">Get Started<img class="image" src="./assets/images/arrow-right.png" /></button>
             </div>
             <div class="container section-second__Project-Management--container"></div>
         </div>
         <div class="part section-second__Work-together">
             <div class="section-second__Work-together--container"><img class="section-second__Work-together--image" src="./assets/images/section-second__Work-together--image.png" /></div>
             <div class="block section-second__Work-together--block">
-                <p class="font1 color2 margin1">Work together</p>
-                <p class="font10 color2 margin2">With whitepace, share your notes with your colleagues and collaborate on them. You can also publish a note to the internet and share the URL with others.</p>
-                <button class="button2">Try it now<img class="image" src="./assets/images/arrow-right.png" /></button>
+                <p class="font__70072 color__black margin__24">Work together</p>
+                <p class="font__40018 color__black margin__60">With whitepace, share your notes with your colleagues and collaborate on them. You can also publish a note to the internet and share the URL with others.</p>
+                <button class="button__204020406--50018">Try it now<img class="image" src="./assets/images/arrow-right.png" /></button>
             </div>
         </div>
     </section>
 
-    <section class="section1 section-third">
+    <section class="section__blue1 section-third">
         <div class="part section-third__Use-as-Extension">
             <div class="block section-third__Use-as-Extension--block">
-                <p class="font1 color1 margin1">Use as Extension</p>
-                <p class="font10 color1 margin2">Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
-                <button class="button2">Let’s Go<img class="image" src="./assets/images/arrow-right.png" /></button>
+                <p class="font__70072 color__white margin__24">Use as Extension</p>
+                <p class="font__40018 color__white margin__60">Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
+                <button class="button__204020406--50018">Let’s Go<img class="image" src="./assets/images/arrow-right.png" /></button>
             </div>
             <div class="container section-third__Use-as-Extension--container"></div>
+        </div>
+    </section>
+
+    <section class="section__white section-fourth">
+        <div class="part section-fourth__Customise-it-to-your-needs">
+            <div class="container section-fourth__Customise-it-to-your-needs--container"></div>
+            <div class="block section-fourth__Customise-it-to-your-needs--block">
+                <p class="font__70072 color__black margin__24">Customise it to your needs</p>
+                <p class="font__40018 color__black margin__60">Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
+                <button class="button__204020408--50018">Let’s Go<img class="image" src="./assets/images/arrow-right.png" /></button>
+            </div>
         </div>
     </section>
 </body>
