--- a/index.html
+++ b/index.html
@@ -91,7 +91,19 @@
             </div>
             <div class="section-fourth__Choose-Your-Plan--container">
 
-                
+
+
+            </div>
+        </div>
+    </section>
+
+    <section class="background-color__blue1 section-fifth">
+        <div class="display__column-center section-fifth__Your-work-everywhere-you-are">
+            <div class="display__column-center position__relative-1 section-fifth__Your-work-everywhere-you-are--block">
+                <p class="font__700-72 color__white margin__24 position__relative-3">Your work, everywhere you are</p>
+                <p class="font__400-18 color__white margin__60">Access your notes from your computer, phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. A terminal app is also available!</p>
+                <img class="position__absolute-2 section-fifth__Your-work-everywhere-you-are--highlight-image" src="./assets/images/section-fifth__Your-work-everywhere-you-are--highlight-image.png" />
+                <button class="button__20402040-8-500-18">Try Taskey<img class="padding__10" src="./assets/images/arrow-right.png" /></button>
             </div>
         </div>
     </section>
