--- a/index.html
+++ b/index.html
@@ -4,48 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-
+    <link rel="stylesheet" href="./index.css" />
     <title>bai tap html-css</title>
   </head>
+
   <body>
     <header class="header container" id="header">
       <nav class="nav__container">
         <a href="#" class="nav__logo">
           <img src="./acssets/img/img_logo.png" alt="logo" />
         </a>
-
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li class="nav__item">
               <p>Products</p>
               <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
             </li>
-
             <li class="nav__item">
               <p>Solutions</p>
               <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
             </li>
-
             <li class="nav__item">
               <p>Resources</p>
               <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
             </li>
-
             <li class="nav__item">
               <p>Spricing</p>
               <i class="fa-sharp fa-solid fa-circle-chevron-down"></i>
             </li>
           </ul>
-
           <div class="nav__button">
             <a href="#" class="nav__button-login button">Login</a>
             <a href="#" class="nav__button-try button"
@@ -62,13 +49,11 @@
       <div class="secton1__data">
         <div class="section1__data">
           <h3 class="section1__title">Get More Done with whitepace</h3>
-
           <p class="section1__content content">
             Project management software that enables your teams to collaborate,
             plan, analyze and manage everyday tasks
           </p>
         </div>
-
         <a href="#" class="section1__button button">
           Try Whitepace free
           <i class="fa-solid fa-arrow-right"></i>
@@ -82,25 +67,35 @@
 
     <!-- SECTION 2 -->
     <section id="section2" class="section2__container container">
+      <!-- SECTION 2 TOP -->
       <div class="section2__top">
-        <div class="section2__content-project">
-          <h3 class="section2__title">Project Management</h3>
-          <img src="./acssets/img/img_section2_element_project.png" alt="" />
+        <div class="section2__data">
+          <div class="section2__content-project">
+            <h3 class="section2__title title">Project Management</h3>
+            <img src="./acssets/img/img_section2_element_project.png" alt="" />
+          </div>
+          <p class="section2__content content">
+            Images, videos, PDFs and audio files are supported. Create math
+            expression and diagrams directly from the app. Take photos with me
+            mobile app and save them to a note.
+          </p>
+          <a href="#" class="section2__button button">
+            Get Started
+            <i class="fa-solid fa-arrow-right"></i>
+          </a>
+          <div style="section2__top-img--left">
+            <img
+              src="./acssets/img/img_section2_background_project.png"
+              alt="left side project management"
+            />
+          </div>
         </div>
-        <p class="section2__content">
-          images, videos, PDFs and audio files are supported. Create math
-          expression and diagrams directly from the app. Take photos with me
-          mobile app and save them to a note.
-        </p>
-        <a href="#" class="section2__button button">
-          Get Started
-          <i class="fa-solid fa-arrow-right"></i>
-        </a>
         <div class="section2__img">
           <img src="./acssets/img/img_section2_image.png" alt="chèn ảnh vào" />
         </div>
       </div>
 
+      <!-- SECTION 2 BOTTOM -->
       <div section2__bottom>
         <div class="section2__content-work">
           <h3 class="section2__title">Work together</h3>
